# AblationPlanner

./: CMakeLists.txt  README.md
RfAblation/: CMakeLists.txt  RfAblation.py
data/Liver01/: Liver01_Clone.nrrd  Segmentation01.seg.nrrd
data/Liver02/: Segmentation02.seg.nrrd
data/Liver03/: Segmentation_Liver03.seg.nrrd
